invaild url change

--- a/404.html
+++ b/404.html
@@ -18,7 +18,10 @@ search_exclude: true
 </style>
 
 <div class="container">
-  <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h1>403</h1>
+  <p><strong>Invaild URL Change</strong></p>
+  <p>Authorization not granted</p>
 </div>
+
+<br>
+<center><img src="https://i.kym-cdn.com/entries/icons/facebook/000/005/540/130221984383.jpg" height="400" width="450"></center>
