--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <input type="text" id="uid" name="uid"><br><br>
         <label for="password">Password</label>
         <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Login">
         <div class="error-message" id="error-message"></div> <!-- New error message element -->
         <div class="signup-link">
           <p>Don't have an account? <a href="./signup.html">Sign Up</a></p>
