--- a/403.html
+++ b/403.html
@@ -19,9 +19,10 @@ search_exclude: true
 
 <div class="container">
   <h1>403</h1>
-  <p><strong>Invaild URL Change</strong></p>
-  <p>Authorization not granted</p>
-</div>
+  <p><strong>Invaild URL Change or Incorrect Credentials</strong></p>
+  <p>Authorization not granted, please login again</p><br><center>
+  <button onclick="window.location.href = '/student2.0/';">Login Again</button></center>
 
+</div>
 <br>
 <center><img src="https://i.kym-cdn.com/entries/icons/facebook/000/005/540/130221984383.jpg" height="400" width="450"></center>
