--- a/register.html
+++ b/register.html
@@ -92,7 +92,7 @@
 
     <button type="submit">Sign Up</button>
     <br>
-    <button class="back-button" onclick="window.location.href='./'">Back to Login Page</button>
+    <button class="back-button" onclick="window.location.href='./'">Login</button>
   </form>
 
   <script>
